[package]
name = "project-euler"
version = "0.1.0"
authors = ["Thomas Zumsteg <thomas.zumsteg@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
log = "0.4"
env_logger = "0.7.1"
num = "0.2.1"
threadpool = "1.1.71"
chrono = "0.4.11"
itertools = "0.9.0"

[lib]
path = "common.rs"
name = "common"

[[bin]]
name = "problem_0001"
path = "problem_0001.rs"

[[bin]]
name = "problem_0002"
path = "problem_0002.rs"

[[bin]]
name = "problem_0003"
path = "problem_0003.rs"

[[bin]]
name = "problem_0004"
path = "problem_0004.rs"

[[bin]]
name = "problem_0005"
path = "problem_0005.rs"

[[bin]]
name = "problem_0006"
path = "problem_0006.rs"

[[bin]]
name = "problem_0007"
path = "problem_0007.rs"

[[bin]]
name = "problem_0008"
path = "problem_0008.rs"

[[bin]]
name = "problem_0009"
path = "problem_0009.rs"

[[bin]]
name = "problem_0010"
path = "problem_0010.rs"

[[bin]]
name = "problem_0011"
path = "problem_0011.rs"

[[bin]]
name = "problem_0012"
path = "problem_0012.rs"

[[bin]]
name = "problem_0013"
path = "problem_0013.rs"

[[bin]]
name = "problem_0014"
path = "problem_0014.rs"

[[bin]]
name = "problem_0015"
path = "problem_0015.rs"

[[bin]]
name = "problem_0016"
path = "problem_0016.rs"

[[bin]]
name = "problem_0017"
path = "problem_0017.rs"

[[bin]]
name = "problem_0018"
path = "problem_0018.rs"

[[bin]]
name = "problem_0019"
path = "problem_0019.rs"

[[bin]]
name = "problem_0020"
path = "problem_0020.rs"

[[bin]]
name = "problem_0021"
path = "problem_0021.rs"

[[bin]]
name = "problem_0022"
path = "problem_0022.rs"

[[bin]]
name = "problem_0023"
path = "problem_0023.rs"

[[bin]]
name = "problem_0024"
path = "problem_0024.rs"

[[bin]]
name = "problem_0025"
path = "problem_0025.rs"

[[bin]]
name = "problem_0026"
path = "problem_0026.rs"

[[bin]]
name = "problem_0027"
path = "problem_0027.rs"

[[bin]]
name = "problem_0028"
path = "problem_0028.rs"

[[bin]]
name = "problem_0029"
path = "problem_0029.rs"

[[bin]]
name = "problem_0030"
path = "problem_0030.rs"

[[bin]]
name = "problem_0031"
path = "problem_0031.rs"

[[bin]]
name = "problem_0032"
path = "problem_0032.rs"

[[bin]]
name = "problem_0033"
path = "problem_0033.rs"

[[bin]]
name = "problem_0034"
path = "problem_0034.rs"
